Fix drag out of bounds issue by limiting bounds

--- a/src/components/Navigation/NavBar/NavBar.module.css
+++ b/src/components/Navigation/NavBar/NavBar.module.css
@@ -6,6 +6,11 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 .Logo {
